# realestate-search

./: .gitignore  Readme.md
backend/: pyproject.toml
backend/app/: main.py  url_resolver.py
backend/app/api/: admin.py  router.py  search.py
backend/app/api/v1/: router.py  search_parse.py
backend/app/core/: config.py  es.py
backend/app/events/: recent.py  store.py
backend/app/search/: index_definitions.py  normalize.py  resolve_service.py  search_service.py  suggest_service.py
backend/realestate_search_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: package-lock.json
frontend/src/app/: global.css  layout.tsx  page.tsx
frontend/src/app/[city]/: page.tsx
frontend/src/app/[city]/[...rest]/: page.tsx
frontend/src/app/api/v1/search/: route.ts
frontend/src/app/disambiguate/: page.tsx
frontend/src/app/go/: page.tsx
frontend/src/app/noida/: page.tsx
frontend/src/app/pune/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: SearchBar.tsx
frontend/src/lib/: api.ts  types.ts
infra/: docker-compose.yml
